Add lvgl kconfig script (run_lvgl_kconfig.py) and custom_lvgl_kconfig_save_settings, custom_lvgl_kconfig_output_header configuration sections to each relevant environment in platformio.ini
Add lvgl esp32 drivers kconfig script (run_lvgl_esp32_drivers_kconfig.py) and custom_lvgl_esp32_drivers_kconfig_save_settings, custom_lvgl_esp32_drivers_kconfig_output_header configuration section to each relevant environment in platformio.ini

Add specific include folder in build_flags for each environment in platformio.ini (-I include/esp32 and -I include/native)

Add the runner library from this project, it simplifies cross execution environments.

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,3 +7,36 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
+
+[platformio]
+default_envs = native
+
+[env]
+extra_scripts = 
+    scripts/run_lvgl_kconfig.py
+    scripts/run_lvgl_esp32_drivers_kconfig.py
+
+
+[env:esp32]
+platform = espressif32@
+board = esp32doit-devkit-v1
+framework = espidf
+build_flags = 
+    -I include/esp32
+monitor_flags = 
+	-f
+	esp32_exception_decoder
+monitor_speed = 115200
+custom_lvgl_kconfig_save_settings = include/esp32/lvgl.config
+custom_lvgl_kconfig_output_header = include/esp32/lvgl.h
+custom_lvgl_esp32_drivers_kconfig_save_settings = include/esp32/lvgl_esp32_drivers.config
+custom_lvgl_esp32_drivers_kconfig_output_header = include/esp32/lvgl_esp32_drivers.h
+
+[env:native]
+platform = native
+build_flags =  
+    -I include/native
+custom_lvgl_kconfig_save_settings = include/native/lvgl.config
+custom_lvgl_kconfig_output_header = include/native/lvgl.h
+
