--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ default_envs = native
 extra_scripts = 
     scripts/run_lvgl_kconfig.py
     scripts/run_lvgl_esp32_drivers_kconfig.py
+    scripts/run_lvgl_native_drivers_kconfig.py
 
 
 [env:esp32]
@@ -24,12 +25,17 @@ board = esp32doit-devkit-v1
 framework = espidf
 build_flags = 
     -I include/esp32
+    -DLV_LVGL_H_INCLUDE_SIMPLE
+    -DLV_CONF_INCLUDE_SIMPLE
+    -DLV_CONF_PATH=lv_conf.h
 monitor_flags = 
 	-f
 	esp32_exception_decoder
 monitor_speed = 115200
-custom_lvgl_kconfig_save_settings = include/esp32/lvgl.config
-custom_lvgl_kconfig_output_header = include/esp32/lvgl.h
+custom_lvgl_kconfig_save_settings = include/esp32/lv_conf.config
+custom_lvgl_kconfig_output_header = include/esp32/lv_conf.h
+custom_lvgl_kconfig_include_headers = 
+    lvgl_esp32_drivers.h
 custom_lvgl_esp32_drivers_kconfig_save_settings = include/esp32/lvgl_esp32_drivers.config
 custom_lvgl_esp32_drivers_kconfig_output_header = include/esp32/lvgl_esp32_drivers.h
 
@@ -37,6 +43,13 @@ custom_lvgl_esp32_drivers_kconfig_output_header = include/esp32/lvgl_esp32_drive
 platform = native
 build_flags =  
     -I include/native
-custom_lvgl_kconfig_save_settings = include/native/lvgl.config
-custom_lvgl_kconfig_output_header = include/native/lvgl.h
+    -DLV_LVGL_H_INCLUDE_SIMPLE
+    -DLV_CONF_INCLUDE_SIMPLE
+    -DLV_CONF_PATH=lv_conf.h
+custom_lvgl_kconfig_save_settings = include/native/lv_conf.config
+custom_lvgl_kconfig_output_header = include/native/lv_conf.h
+custom_lvgl_kconfig_include_headers = 
+    lvgl_native_drivers.h
+custom_lvgl_native_drivers_kconfig_save_settings = include/native/lvgl_native_drivers.config
+custom_lvgl_native_drivers_kconfig_output_header = include/native/lvgl_native_drivers.h
 
