--- a/include/esp32/lvgl_esp32_drivers.config
+++ b/include/esp32/lvgl_esp32_drivers.config
@@ -22,22 +22,22 @@ CONFIG_LV_PREDEFINED_DISPLAY_NONE=y
 # CONFIG_LV_PREDEFINED_DISPLAY_TTGO is not set
 # CONFIG_LV_PREDEFINED_DISPLAY_TTGO_CAMERA_PLUS is not set
 # CONFIG_LV_PREDEFINED_DISPLAY_WT32_SC01 is not set
-CONFIG_LV_TFT_DISPLAY_CONTROLLER_ILI9341=y
+CONFIG_LV_TFT_DISPLAY_CONTROLLER_ILI9488=y
 CONFIG_LV_TFT_DISPLAY_PROTOCOL_SPI=y
-CONFIG_LV_DISPLAY_ORIENTATION_PORTRAIT=y
+# CONFIG_LV_DISPLAY_ORIENTATION_PORTRAIT is not set
 # CONFIG_LV_DISPLAY_ORIENTATION_PORTRAIT_INVERTED is not set
-# CONFIG_LV_DISPLAY_ORIENTATION_LANDSCAPE is not set
+CONFIG_LV_DISPLAY_ORIENTATION_LANDSCAPE=y
 # CONFIG_LV_DISPLAY_ORIENTATION_LANDSCAPE_INVERTED is not set
-CONFIG_LV_DISPLAY_ORIENTATION=0
-CONFIG_LV_PREDEFINED_PINS_NONE=y
-# CONFIG_LV_PREDEFINED_PINS_38V4 is not set
+CONFIG_LV_DISPLAY_ORIENTATION=2
+# CONFIG_LV_PREDEFINED_PINS_NONE is not set
+CONFIG_LV_PREDEFINED_PINS_38V4=y
 # CONFIG_LV_PREDEFINED_PINS_30 is not set
 # CONFIG_LV_PREDEFINED_PINS_38V1 is not set
 # CONFIG_LV_PREDEFINED_PINS_TKOALA is not set
-CONFIG_LV_TFT_DISPLAY_USER_CONTROLLER_ILI9341=y
+# CONFIG_LV_TFT_DISPLAY_USER_CONTROLLER_ILI9341 is not set
 # CONFIG_LV_TFT_DISPLAY_USER_CONTROLLER_ILI9481 is not set
 # CONFIG_LV_TFT_DISPLAY_USER_CONTROLLER_ILI9486 is not set
-# CONFIG_LV_TFT_DISPLAY_USER_CONTROLLER_ILI9488 is not set
+CONFIG_LV_TFT_DISPLAY_USER_CONTROLLER_ILI9488=y
 # CONFIG_LV_TFT_DISPLAY_USER_CONTROLLER_ST7789 is not set
 # CONFIG_LV_TFT_DISPLAY_USER_CONTROLLER_ST7796S is not set
 # CONFIG_LV_TFT_DISPLAY_USER_CONTROLLER_GC9A01 is not set
@@ -52,52 +52,83 @@ CONFIG_LV_TFT_DISPLAY_USER_CONTROLLER_ILI9341=y
 # CONFIG_LV_TFT_DISPLAY_USER_CONTROLLER_RA8875 is not set
 # CONFIG_LV_TFT_DISPLAY_USER_CONTROLLER_ILI9163C is not set
 # CONFIG_LV_TFT_DISPLAY_USER_CONTROLLER_PCD8544 is not set
-# CONFIG_CUSTOM_DISPLAY_BUFFER_SIZE is not set
+CONFIG_CUSTOM_DISPLAY_BUFFER_SIZE=y
+CONFIG_CUSTOM_DISPLAY_BUFFER_BYTES=1024
 CONFIG_LV_TFT_DISPLAY_SPI2_HOST=y
 # CONFIG_LV_TFT_DISPLAY_SPI3_HOST is not set
 CONFIG_LV_TFT_DISPLAY_SPI_TRANS_MODE_SIO=y
 # CONFIG_LV_TFT_DISPLAY_SPI_TRANS_MODE_DIO is not set
 # CONFIG_LV_TFT_DISPLAY_SPI_TRANS_MODE_QIO is not set
-CONFIG_LV_TFT_DISPLAY_SPI_HALF_DUPLEX=y
-# CONFIG_LV_TFT_DISPLAY_SPI_FULL_DUPLEX is not set
+# CONFIG_LV_TFT_DISPLAY_SPI_HALF_DUPLEX is not set
+CONFIG_LV_TFT_DISPLAY_SPI_FULL_DUPLEX=y
 # CONFIG_LV_TFT_USE_CUSTOM_SPI_CLK_DIVIDER is not set
 CONFIG_LV_TFT_CUSTOM_SPI_CLK_DIVIDER=2
-# CONFIG_LV_INVERT_COLORS is not set
 
 #
 # Display Pin Assignments
 #
 CONFIG_LV_DISP_SPI_MOSI=13
-# CONFIG_LV_DISPLAY_USE_SPI_MISO is not set
+CONFIG_LV_DISPLAY_USE_SPI_MISO=y
+CONFIG_LV_DISP_SPI_MISO=12
+CONFIG_LV_DISP_SPI_INPUT_DELAY_NS=0
 CONFIG_LV_DISP_SPI_CLK=14
 CONFIG_LV_DISPLAY_USE_SPI_CS=y
-CONFIG_LV_DISP_SPI_CS=15
+CONFIG_LV_DISP_SPI_CS=5
 CONFIG_LV_DISPLAY_USE_DC=y
-CONFIG_LV_DISP_PIN_DC=2
+CONFIG_LV_DISP_PIN_DC=19
 CONFIG_LV_DISP_USE_RST=y
-CONFIG_LV_DISP_PIN_RST=4
+CONFIG_LV_DISP_PIN_RST=18
 # end of Display Pin Assignments
 
 # CONFIG_LV_DISP_BACKLIGHT_OFF is not set
-CONFIG_LV_DISP_BACKLIGHT_SWITCH=y
-# CONFIG_LV_DISP_BACKLIGHT_PWM is not set
-# CONFIG_LV_BACKLIGHT_ACTIVE_LVL is not set
-CONFIG_LV_DISP_PIN_BCKL=-1
+# CONFIG_LV_DISP_BACKLIGHT_SWITCH is not set
+CONFIG_LV_DISP_BACKLIGHT_PWM=y
+CONFIG_LV_BACKLIGHT_ACTIVE_LVL=y
+CONFIG_LV_DISP_PIN_BCKL=23
 CONFIG_LV_I2C_DISPLAY_PORT=0
 # end of LVGL TFT Display controller
 
 #
 # LVGL Touch controller
 #
-CONFIG_LV_TOUCH_CONTROLLER=0
-CONFIG_LV_TOUCH_CONTROLLER_NONE=y
-# CONFIG_LV_TOUCH_CONTROLLER_XPT2046 is not set
+CONFIG_LV_TOUCH_CONTROLLER=1
+# CONFIG_LV_TOUCH_CONTROLLER_NONE is not set
+CONFIG_LV_TOUCH_CONTROLLER_XPT2046=y
 # CONFIG_LV_TOUCH_CONTROLLER_FT6X06 is not set
 # CONFIG_LV_TOUCH_CONTROLLER_STMPE610 is not set
 # CONFIG_LV_TOUCH_CONTROLLER_ADCRAW is not set
 # CONFIG_LV_TOUCH_CONTROLLER_FT81X is not set
 # CONFIG_LV_TOUCH_CONTROLLER_RA8875 is not set
 # CONFIG_LV_TOUCH_CONTROLLER_GT911 is not set
+CONFIG_LV_TOUCH_DRIVER_PROTOCOL_SPI=y
+CONFIG_LV_TOUCH_CONTROLLER_SPI2_HOST=y
+# CONFIG_LV_TOUCH_CONTROLLER_SPI3_HOST is not set
+
+#
+# Touchpanel (XPT2046) Pin Assignments
+#
+CONFIG_LV_TOUCH_SPI_MISO=12
+CONFIG_LV_TOUCH_SPI_MOSI=13
+CONFIG_LV_TOUCH_SPI_CLK=14
+CONFIG_LV_TOUCH_SPI_CS=25
+CONFIG_LV_TOUCH_PIN_IRQ=34
+# end of Touchpanel (XPT2046) Pin Assignments
+
+#
+# Touchpanel Configuration (XPT2046)
+#
+CONFIG_LV_TOUCH_X_MIN=200
+CONFIG_LV_TOUCH_Y_MIN=120
+CONFIG_LV_TOUCH_X_MAX=1900
+CONFIG_LV_TOUCH_Y_MAX=1900
+# CONFIG_LV_TOUCH_XY_SWAP is not set
+# CONFIG_LV_TOUCH_INVERT_X is not set
+# CONFIG_LV_TOUCH_INVERT_Y is not set
+CONFIG_LV_TOUCH_DETECT_IRQ=y
+# CONFIG_LV_TOUCH_DETECT_IRQ_PRESSURE is not set
+# CONFIG_LV_TOUCH_DETECT_PRESSURE is not set
+# end of Touchpanel Configuration (XPT2046)
+
 CONFIG_LV_I2C_TOUCH_PORT=0
 # end of LVGL Touch controller
 # end of LVGL ESP Drivers
