enable exception decoder increase flash size fix stack use after free in esp32 hal

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,9 +28,7 @@ build_flags =
     -DLV_LVGL_H_INCLUDE_SIMPLE
     -DLV_CONF_INCLUDE_SIMPLE
     -DLV_CONF_PATH=lv_conf.h
-monitor_flags = 
-	-f
-	esp32_exception_decoder
+monitor_filters = esp32_exception_decoder
 monitor_speed = 115200
 custom_lvgl_kconfig_save_settings = include/esp32/lv_conf.config
 custom_lvgl_kconfig_output_header = include/esp32/lv_conf.h
