--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ sdkconfig.esp32.old
 include/esp32/lvgl_esp32_drivers.config.old
 include/native/lv_conf.config.old
 include/native/lvgl_native_drivers.config.old
+include/esp32/lv_conf.config.old
