--- a/include/esp32/lv_conf.config
+++ b/include/esp32/lv_conf.config
@@ -294,7 +294,8 @@ CONFIG_LV_BUILD_EXAMPLES=y
 #
 # Demos
 #
-# CONFIG_LV_USE_DEMO_WIDGETS is not set
+CONFIG_LV_USE_DEMO_WIDGETS=y
+# CONFIG_LV_DEMO_WIDGETS_SLIDESHOW is not set
 # CONFIG_LV_USE_DEMO_KEYPAD_AND_ENCODER is not set
 # CONFIG_LV_USE_DEMO_BENCHMARK is not set
 # CONFIG_LV_USE_DEMO_STRESS is not set
